<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="password_required_error">Password is a required</string>
    <string name="username_required_error">Username is a required</string>
    <string name="error_dialog_title">Error</string>
    <string name="username_key">username</string>
    <string name="password_key">password</string>
    <string name="email_key">email</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="external_storage_error">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_length_warning">The selected video must be less than 10 MB</string>
    <string name="file_error_message">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large, select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a new file</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="message_sent">Message sent!</string>
    <string name="error_sending_message">There was an error sending the message.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_description_background">Ribbit Frog Background Image</string>
    <string name="cancel_button">CANCEL</string>
    <string name="button_divider_label">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new message from %s</string>


</resources>
