<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="mikedvorscak.com.ribbit.ui.SignUpActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        android:contentDescription="@string/content_description_background"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/textFieldWrapper"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText" />
        </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_below="@id/textFieldWrapper"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/button_divider_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/sign_up_button"
        android:id="@+id/signUpButton"
        android:layout_below="@id/textFieldWrapper"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_alignParentLeft="true"
        style="@style/DefaultButton" />

    <Button
        android:text="@string/cancel_button"
        android:id="@+id/cancelButton"
        android:layout_below="@id/textFieldWrapper"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_alignParentRight="true"
        style="@style/DefaultButton"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/signUpButton"
        android:layout_marginTop="@dimen/login_vertical_margin"
        style="@style/DefaultProgressBar" />
</RelativeLayout>
