<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="mikedvorscak.com.ribbit.ui.LoginActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        android:contentDescription="@string/content_description_background"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/textFieldWrapper"
        style="@style/AuthFieldContainer">
        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText" />

    </LinearLayout>

    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_below="@id/textFieldWrapper"
        android:layout_alignParentLeft="true"
        style="@style/DefaultButton"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/signUpText"
        android:layout_marginTop="@dimen/login_vertical_margin"
        style="@style/DefaultProgressBar" />
</RelativeLayout>
